--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  min-width: 600px;
 }
 
 .App-logo {
@@ -35,4 +42,137 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.wrapper{
+ padding: 5px 10px;
+  background-color: #003950;
+}
+
+.content{
+  max-width: 900px;
+  padding: 20px;
+  background-color: #001c27;
+  border-radius: 20px;
+  margin: auto;
+}
+
+.add-new-section{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin-bottom: 30px;
+}
+
+.new-task-input{
+  padding: 10px 20px;
+  font-size: 14px;
+  border-radius: 6px;
+  outline: none;
+  line-height: 14px;
+  flex-basis: 70%;
+}
+
+.add-new-btn{
+  flex-basis: 30%;
+}
+
+.toggle-btn {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 50px;
+}
+
+.toggle-btn input{
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 70px;
+  background-color: #111;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  left: 10px;
+  bottom: 10px;
+  border-radius: 50%;
+  background-color: #f8ffaf;
+  transition: .4s;
+}
+
+input:checked + .slider:before {
+  transform: translateX(40px);
+}
+
+.filter-section{
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+
+
+.btn{
+  flex: 1;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-weight: 500;
+  padding: 10px 20px;
+  background-color: #008e9f;
+  border-radius: 6px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.todo-list{
+  padding: 0 50px;
+  margin-top: 30px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.todo-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4px 20px;
+  border-radius: 6px;
+  width: 100%;
+  color: #fff;
+  display: flex;
+  background-color: rgb(0, 150, 136);
+}
+
+.todo-controls-box{
+  display: flex;
+  gap: 10px;
+}
+
+.todo-control-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  font-size: 14px;
+}
+
+.todo-control-btn input{
+  height: 14px;
+  width: 14px;
 }
