Add color mode, fix id bug and some UI modified

--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ input:checked + .slider:before {
   border-radius: 6px;
   font-size: 14px;
   text-align: center;
+  transition: all ease 0.2s;
 }
 
 .todo-list{
@@ -156,6 +157,7 @@ input:checked + .slider:before {
   color: #fff;
   display: flex;
   background-color: rgb(0, 150, 136);
+  position: relative;
 }
 
 .todo-controls-box{
@@ -176,3 +178,65 @@ input:checked + .slider:before {
   height: 14px;
   width: 14px;
 }
+
+.todo-item.completed {
+  opacity: 0.6;
+
+}
+
+.todo-item.completed .todo-item-name{
+  text-decoration: line-through;
+}
+.btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.todo-control-btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.todo-color-list{
+  width: 120px;
+  list-style: none;
+  display: none;
+  flex-wrap: wrap;
+  position: absolute;
+  right: -130px;
+  top: -10px;
+  background-color: #fff;
+  padding: 4px 4px;
+  border-radius: 6px;
+  row-gap: 4px;
+  justify-content: space-between;
+}
+.todo-color-list.active{
+  display: flex;
+}
+
+.todo-color-item {
+  width: 30%;
+  height: 26px;
+  border-radius: 2px;
+}
+
+.todo-color-item.red {
+  background-color: rgb(235, 19, 19);
+}
+.todo-color-item.blue {
+  background-color: rgb(0, 188, 212);
+} 
+.todo-color-item.orange{
+  background-color: rgb(255, 87, 34);
+}
+.todo-color-item.green{
+  background-color: rgb(76, 175, 80);
+}
+.todo-color-item.pink{
+  background-color: rgb(233, 30, 99);
+}
+.todo-color-item.violet{
+    background-color: rgb(103, 58, 183);
+}
+
